redefined the generic algebra as the algebra of a category

--- a/preamble.sty
+++ b/preamble.sty
@@ -163,6 +163,8 @@
 % transpose operator
 \newcommand{\transpose}{\top}
 
+% generic category
+\newcommand{\gcat}[1][n,r]{\mathcal{G}(#1)}
 
 % -------------------------------------------- %
 %				TITLE PAGE						 %
