--- a/preamble.sty
+++ b/preamble.sty
@@ -142,8 +142,9 @@
 \newcommand{\ro}{\operatorname{ro}}
 \newcommand{\co}{\operatorname{co}}
 
-% cyclic quivers
-\newcommand{\cyclic}{\Delta}
+% PRODUCT(S) OF ORBITS
+\newcommand{\xprod}[2][]{X_{#2}^{#1}}
+\newcommand{\yprod}[2][]{Y_{#2}^{#1}}
 
 % quiver for presentation of q schur algebras.
 \newcommand{\presentationquiver}[1][n,r]{\Gamma(#1)}
