--- a/report.tex
+++ b/report.tex
@@ -14,15 +14,26 @@
 
 Fix natural numbers $n$ and $r$.
 
-\begin{definition}\label{def:compositions}
+\begin{definition}[compositions]\label{def:compositions}
 A composition of $r$ into $n$ parts is an $n$-tuple $\lambda=(\lambda_1,\ldots,\lambda_n)\in\integers^n$ of non-negative integers whose sum equals $r$. Denote the set of compositions of $r$ into $n$ parts by $\compositions$.
 \end{definition}
 
-\begin{definition}\label{def:matrices}
-Let $\matrices$ be the set of matrices $A=(a_{i,j})_{i,j\in\integers}$ with non-negative integer entries $a_{i,j}$ satisfying the following conditions: each row or column has only finitely many non-zero entries; the sum of the entries in any $n$ consecutive rows or columns equals $r$; $a_{i-n,j-n}=a_{i,j}$ for each $i,j\in\integers$. These matrices are referred to as infinite periodic matrices.
+\begin{definition}[infinite periodic matrices]\label{def:matrices}
+Let $\matrices$ be the set of matrices $A=(a_{i,j})_{i,j\in\integers}$ with integer entries $a_{i,j}$ satisfying the following conditions: 
+\begin{itemize}
+\item
+$a_{i,j}\geq 0$ for each $i,j\in\integers$;
+\item
+each row or column has only finitely many non-zero entries;
+\item
+the sum of the entries in any $n$ consecutive rows or columns equals $r$;
+\item
+$a_{i-n,j-n}=a_{i,j}$ for each $i,j\in\integers$.
+\end{itemize}
+These matrices are referred to as infinite periodic matrices.
 \end{definition}
 
-\begin{definition}\label{def:source-target}
+\begin{definition}[source and target]\label{def:source-target}
 Given $A\in\matrices$, let $\ro{A}$ and $\co{A}$ be the compositions of $r$ into $n$ parts given by
 \begin{equation*}
 \ro{A} = \left( \sum_{j\in\integers}a_{1,j}, \ldots, \sum_{j\in\integers} a_{n,j}\right)
@@ -53,16 +64,39 @@ for each $i,j\in\integers$.
 
 The diagonal action of $G$ on $\dblflags$ has orbits indexed by the set $\matrices$ of infinite periodic matrices (see definition \ref{def:matrices}). The $G$-orbit corresponding to $A\in\matrices$ is denoted $\mathcal{O}_A$ and consists of those pairs $(L,L')\in\dblflags$ with periodic characteristic matrix $\type{L}{L'}$ equal to $A$.
 
-{\color{blue}define $Y_{A,B}$, $\xprod{A,B}$ in terms of the maps $\pi,\delta$ and the product of orbits.}
-
-Given $A,B\in\matrices$ define
+Given $A,B\in\matrices$ with $\co{A}=\ro{B}$, define
 \begin{equation*}
-\xprod{A,B} = \{(L,L''):\exists L'\in\flags\text{ with } (L,L')\in\mathcal{O}_A \text{ and } (L',L'')\in\mathcal{O}_B\}.
+\yprod{A,B} = \{ (L,L',L'')\in\flags^3: (L,L')\in\mathcal{O}_A \text{ and } (L',L'')\in\mathcal{O}_B\},
+\end{equation*}
+\begin{equation*}
+\xprod{A,B} = \{(L,L'')\in\flags^2:\exists L'\in\flags\text{ with } (L,L')\in\mathcal{O}_A \text{ and } (L',L'')\in\mathcal{O}_B\}.
+\end{equation*}
+If also $L\in\flags_{\ro{A}}$, define the $L$-slices of $\yprod{A,B}$ and $\xprod{A,B}$ respectively as
+\begin{equation*}
+\yprod[L]{A,B} = \{(L',L'')\in\flags^2: (L,L',L'')\in\yprod{A,B}\},
+\end{equation*}
+\begin{equation*}
+\xprod[L]{A,B} = \{L''\in\flags: (L,L'')\in\xprod{A,B}\}.
 \end{equation*}
 
 \begin{observation}
 There are only finitely many $G$-orbits in $\xprod{A,B}$.
 \end{observation}
+
+Similarly, given $A,B,C\in\matrices$ with $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$ and $L\in\flags_{\ro{A}}$, there are spaces $\xprod{A,B,C}$, $\yprod{A,B,C}$ and their respective $L$-slices, defined as follows:
+\begin{equation*}
+\yprod{A,B,C} = \{(L,L',L'',L''')\in\flags^4: (L,L')\in\mathcal{O}_A, (L',L'')\in\mathcal{O}_B \text{ and } (L'',L''')\in\mathcal{O}_C\},
+\end{equation*}
+\begin{equation*}
+\xprod{A,B,C} = \{(L,L''')\in\flags^2: \exists (L',L'')\in\mathcal{O}_B \text{ with } (L,L')\in\mathcal{O}_A \text{ and } (L'',L''')\in\mathcal{O}_C\},
+\end{equation*}
+\begin{equation*}
+\yprod[L]{A,B,C} = \{ (L',L'',L''')\in\flags^3: (L,L',L'',L''')\in\yprod{A,B,C}\},
+\end{equation*}
+\begin{equation*}
+\xprod[L]{A,B,C} = \{ L'''\in\flags: (L,L''')\in\xprod{A,B,C}\}.
+\end{equation*}
+
 
 \section{Convolution algebras}
 
@@ -74,7 +108,7 @@ for $(L,L'')\in\dblflags$.
 
 $f\star g$ is well defined since the supports of $f$ and $g$ consist of finitely many $G$-orbits, so there are only finitely many $L'\in\flags$ such that $f(L,L')g(L',L'')\neq 0$, given $(L,L'')\in\dblflags$. $f\star g$ is constant on $G$-orbits and is supported on finitely many $G$-orbits, so $f\star g\in S$.
 
-\begin{lemma}
+\begin{lemma}\label{lemma:convolution-algebra}
 The set $S$ together with the operation $\star$ is an associative $\integers$-algebra with identity element $\iota$ given by $\iota(L,L) = 1$ and $\iota(L,L')=0$ for $L'\neq L$.
 \end{lemma}
 
@@ -112,9 +146,14 @@ for any $(L,L'')\in\mathcal{O}_C$.
 
 \section{Affine q-Schur algebras}
 
-There exists a polynomial $\gamma_{A,B,C}\in\integers[q]$ for each $A,B,C\in\matrices$ such that $\gamma_{A,B,C}(\mathrm{q}) = \gamma_{A,B,C;\mathrm{q}}$ for any prime power $\mathrm{q}$, following \cite[section 4]{lusztig99}. The affine $q$-Schur algebra $\qschur$ (defined in \needsreference) is a free $\integers[q]$-module with basis $\{e_A:A\in\matrices\}$ and with multiplication given by
+There exist polynomials $\gamma_{A,B,C}\in\integers[q]$ for $A,B,C\in\matrices$ such that $\gamma_{A,B,C}(\mathrm{q}) = \gamma_{A,B,C;\mathrm{q}}$ for any prime power $\mathrm{q}$, following \cite[section 4]{lusztig99}. The affine $q$-Schur algebra $\qschur$ (defined in \needsreference) is a $\integers[q]$-algebra which is a free $\integers[q]$-module with basis $\{e_A:A\in\matrices\}$ and with multiplication given by
 \begin{equation*}
 e_A e_B = \sum_{C} \gamma_{A,B,C}e_C.
+\end{equation*}
+
+Given the existence of these `universal polynomials' $\gamma_{A,B,C}\in\integers[q]$, it follows from Lemma \ref{lemma:convolution-algebra} that $\qschur$ is an associative $\integers[q]$-algebra with multiplicative identity given by
+\begin{equation*}
+1 = \sum_{\lambda\in\compositions} e_{D_\lambda}.
 \end{equation*}
 
 $(L,L')\in\mathcal{O}_A$ if and only if $(L',L)\in\mathcal{O}_{A^\transpose}$. In fact, the operation of transposition on $\dblflags$ (or on $\matrices$) induces an anti-automorphism of $\qschur$.
@@ -486,14 +525,14 @@ Let $V = \field[\epsilon,\epsilon^{-1}]^r$. $L_0$ is a free $\field[\epsilon]$-m
 
 Suppose $A,B\in\matrices$ with $\co{A}=\ro{B}$. Recall the notation
 \begin{equation*}
-Y_{A,B} = \{(L,L',L'')\in\flags^3: (L,L')\in\mathcal{O}_A, (L',L'')\in\mathcal{O}_B\}
+\yprod{A,B} = \{(L,L',L'')\in\flags^3: (L,L')\in\mathcal{O}_A, (L',L'')\in\mathcal{O}_B\}
 \end{equation*}
 and
 \begin{equation*}
-\xprod{A,B} = \{(L,L'')\in\flags^2:\exists L'\in\flags \text{ with } (L,L',L'')\in Y_{A,B}\}.
+\xprod{A,B} = \{(L,L'')\in\flags^2:\exists L'\in\flags \text{ with } (L,L',L'')\in \yprod{A,B}\}.
 \end{equation*}
 
-$\xprod{A,B}$ is the image of $Y_{A,B}$ under the projection onto the first and last components.
+$\xprod{A,B}$ is the image of $\yprod{A,B}$ under the projection onto the first and last components.
 
 \begin{lemma}\label{lemma:orbit-products-are-bounded}
 There is $N\in\naturals$ such that
@@ -512,7 +551,7 @@ and
 \begin{equation*}
 \epsilon^{N_2}L_0'\subset L_0''\subset \epsilon^{-N_2}L_0',
 \end{equation*}
-whenever $(L,L',L'')\in Y_{A,B}$. Then, for $(L,L',L'')\in Y_{A,B}$,
+whenever $(L,L',L'')\in \yprod{A,B}$. Then, for $(L,L',L'')\in \yprod{A,B}$,
 \begin{equation*}
 L_0''\subset \epsilon^{-N_2} L_0' \subset \epsilon^{-(N_1+N_2)} L_0
 \end{equation*}
@@ -529,7 +568,7 @@ whenever $(L,L'')\in \xprod{A,B}$.
 \end{proof}
 
 \begin{lemma}\label{lemma:codimensions-in-orbit-product}
-Suppose $N_1,N_2\in\naturals$ with $\epsilon^{N_1}L_0\subset L_0\subset \epsilon^{-N_1}L_0$ and $\epsilon^{N_2}L_0'\subset L_0''\subset \epsilon^{-N_2}L_0'$ whenever $(L,L',L'')\in Y_{A,B}$ and let $N = N_1 + N_2$. Then
+Suppose $N_1,N_2\in\naturals$ with $\epsilon^{N_1}L_0\subset L_0\subset \epsilon^{-N_1}L_0$ and $\epsilon^{N_2}L_0'\subset L_0''\subset \epsilon^{-N_2}L_0'$ whenever $(L,L',L'')\in \yprod{A,B}$ and let $N = N_1 + N_2$. Then
 \begin{equation*}
 \dim\left(\frac{\epsilon^{-N}L_0}{L_0''}\right) = d_{nN_1,0}(A) + d_{nN_2,0}(B)
 \end{equation*}
@@ -541,7 +580,7 @@ whenever $(L,L'')\in \xprod{A,B}$.
 \end{lemma}
 
 \begin{proof}
-Suppose $(L,L'')\in \xprod{A,B}$ and $L'\in\flags$ so that $(L,L',L'')\in Y_{A,B}$. As in lemma \ref{lemma:orbit-products-are-bounded}, $\epsilon^N L_0\subset L_0''\subset \epsilon^{-N}L_0$, so
+Suppose $(L,L'')\in \xprod{A,B}$ and $L'\in\flags$ so that $(L,L',L'')\in \yprod{A,B}$. As in lemma \ref{lemma:orbit-products-are-bounded}, $\epsilon^N L_0\subset L_0''\subset \epsilon^{-N}L_0$, so
 \begin{equation*}
 \dim\left(\frac{\epsilon^{-N}L_0}{L_0''}\right) + \dim\left(\frac{L_0''}{\epsilon^N L_0}\right) = \dim\left(\frac{\epsilon^{-N}L_0}{\epsilon^N L_0}\right).
 \end{equation*}
@@ -632,7 +671,7 @@ G_L\times G_{L'}\to\flags: (\alpha,\beta)\mapsto \alpha\beta L''.
 \end{lemma}
 
 \begin{proof}
-Suppose $\alpha\in G_L$ and $\beta\in G_{L'}$. $(L,\alpha L',\alpha\beta L'')\in Y_{A,B}$ since $(L,\alpha L')\sim (L,L')\in\mathcal{O}_A$ and $(\alpha L',\alpha\beta L'')\sim (L',L'')\in\mathcal{O}_B$. This shows $(L,\alpha\beta L'')\in \xprod{A,B}$ and thus $\alpha\beta L''\in \xprod[L]{A,B}$.
+Suppose $\alpha\in G_L$ and $\beta\in G_{L'}$. $(L,\alpha L',\alpha\beta L'')\in \yprod{A,B}$ since $(L,\alpha L')\sim (L,L')\in\mathcal{O}_A$ and $(\alpha L',\alpha\beta L'')\sim (L',L'')\in\mathcal{O}_B$. This shows $(L,\alpha\beta L'')\in \xprod{A,B}$ and thus $\alpha\beta L''\in \xprod[L]{A,B}$.
 
 Conversely, suppose $N''\in \xprod[L]{A,B}$. $(L,N'')\in \xprod{A,B}$, so there is $N'$ such that $(L,N')\in\mathcal{O}_A$ and $(N',N'')\in\mathcal{O}_B$. There exist $\gamma,\delta\in G$ such that $\gamma (L,L') = (N,N')$ and $\delta (L',L'') = (N',N'')$. Then $(L,N',N'') = (L,\gamma L', \delta L'') = (L, \gamma L',\gamma (\gamma^{-1}\delta)L'')$, where $\gamma\in G_L$ and $\gamma^{-1}\delta\in G_{L'}$. This shows $N'' \in G_L G_{L'} L''$ as required.
 \end{proof}
@@ -888,7 +927,7 @@ Write $X=\xprod[L]{A,B}$. $X$ is irreducible and finite dimensional, using Lemma
 \begin{equation*}
 X = \bigcup_C O_C,
 \end{equation*}
-where the union is taken over the finite set $\{C\in\matrices : \mathcal{O}_C\subset X_{A,B}\}$.
+where the union is taken over the finite set $\{C\in\matrices : \mathcal{O}_C\subset\xprod{A,B}\}$.
 
 A proper, non-empty, closed subset of $X$ has strictly smaller dimension than $X$, so there is $C$ such that $\overline{O_C}=X$. $O_C$ is locally closed, by Lemma \ref{lemma:locally-closed-orbits}, so it follows that $O_C$ is open in $\overline{O_C}=X$.
 
@@ -899,24 +938,24 @@ Now suppose $O_C$ is an open $G_L$ orbit and let $D\in\matrices$. $O_D\subset X\
 
 Given $A,B,C\in\matrices$ and $L\in\flags$ let
 \begin{equation*}
-X_{A,B,C}^L = \{L'''\in \flags:\exists (L',L'')\in\mathcal{O}_B \text{ with } (L,L')\in\mathcal{O}_A, (L'',L''')\in\mathcal{O}_C\}.
+\xprod[L]{A,B,C} = \{L'''\in \flags:\exists (L',L'')\in\mathcal{O}_B \text{ with } (L,L')\in\mathcal{O}_A, (L'',L''')\in\mathcal{O}_C\}.
 \end{equation*}
 
-Note that $X_{A,B,C}^L\subset$ is contained in $\flags_{\co{C}}$ and is non-empty only if $L\in\flags_{\ro{A}}$, $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$. $X_{A,B,C}^L$ consists of finitely many $G_L$-orbits. Using a similar argument to the existence of generic orbits we show that there is a unique generic orbit in $X_{A,B,C}^L$, which will establish associativity of the generic product. We now suppose $X_{A,B,C}^L$ is non-empty and fix $(L,L',L'',L''')\in\flags^4$ with $(L,L')\in\mathcal{O}_A$, $(L',L'')\in\mathcal{O}_B$ and $(L'',L''')\in\mathcal{O}_C$.
+Note that $\xprod[L]{A,B,C}$ is contained in $\flags_{\co{C}}$ and is non-empty only if $L\in\flags_{\ro{A}}$, $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$. $\xprod[L]{A,B,C}$ consists of finitely many $G_L$-orbits. Using a similar argument to the existence of generic orbits we show that there is a unique generic orbit in $\xprod[L]{A,B,C}$, which will establish associativity of the generic product. We now suppose $\xprod[L]{A,B,C}$ is non-empty and fix $(L,L',L'',L''')\in\flags^4$ with $(L,L')\in\mathcal{O}_A$, $(L',L'')\in\mathcal{O}_B$ and $(L'',L''')\in\mathcal{O}_C$.
 
 \begin{lemma}
-$X_{A,B,C}^L$ is the image of the map
+$\xprod[L]{A,B,C}$ is the image of the map
 \begin{equation*}
 \phi\colon G_L\times G_{L'}\times G_{L''}\to \flags: (\alpha,\beta,\gamma)\mapsto \alpha\beta\gamma L'''.
 \end{equation*}
 \end{lemma}
 
 \begin{proposition}
-The closure $\overline{X_{A,B,C}^L}$ of $X_{A,B,C}^L$ in $\flags$ is irreducible.
+The closure $\overline{\xprod[L]{A,B,C}}$ of $\xprod[L]{A,B,C}$ in $\flags$ is irreducible.
 \end{proposition}
 
 \begin{proposition}
-There is a unique generic $G_L$-orbit in $X_{A,B,C}^L$.
+There is a unique generic $G_L$-orbit in $\xprod[L]{A,B,C}$.
 \end{proposition}
 
 \chapter{A realisation of affine zero Schur algebras}
